Add concurrency interview Q&A with answers (race condition, virtual threads, CAS, etc.)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>